--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon server.js"
+        "dev": "nodemon server.js",
+        "peer": "peerjs --port 3001"
     },
     "keywords": [],
     "author": "",
@@ -12,6 +13,7 @@
     "dependencies": {
         "ejs": "^3.1.3",
         "express": "^4.17.1",
+        "peer": "^0.6.1",
         "socket.io": "^2.3.0",
         "uuid": "^8.1.0"
     },
